# texedit

./: .buildinfo  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .tokeignore  CMakeLists.txt  Makefile  README  README.md  build.gradle  buildstrip.sh  genindex.html  index.html  objects.inv  run.sh  search.html  searchindex.js  settings.gradle  start.sh
.doctrees/: environment.pickle  index.doctree
.doctrees/content/: building.doctree  contributors.doctree
.github/workflows/: publish-docs.yml
_sources/content/: building.rst.txt
_static/: documentation_options.js
app/: build.gradle
app/src/main/java/texedit/: App.java
app/src/main/java/texedit/windows/: EditorWindow.java  Window.java
cmake/: copy_dir.cmake
cmake/mod/: FindCargo.cmake  FindPoppler.cmake
compiler/: CMakeLists.txt  Cargo.toml  texpdfc.sh
compiler/scripts/: texpdfc.sh
compiler/src/: cli.rs  compiler.rs  error.rs  files.rs  log.rs  main.rs  watch.rs
content/: building.html  contributors.html
disttex/: README  env_darwin.sh
docs/: conf.py  configure.sh  index.rst  requirements.txt
docs/static/css/: link-consist.css  sidebar.css
examples/: Fail.tex  HelloWorld.tex  HelloWorldSubfile.tex
frontend/: CMakeLists.txt  app.cpp  app.hpp  build.rs  main.cpp  main.hpp  root_frame.cpp  root_frame.hpp  tauri.conf.json
frontend/gui/: command_ids.hpp  editor_panel.cpp  main_frame.cpp  main_frame.hpp  preview_panel.cpp  preview_panel.hpp  prog_info.cpp  prog_info.hpp
frontend/preview/: bun.lockb  index.html  package-lock.json  package.json  serverStart.js  start.ts
frontend/preview/lib/pdf.js/: pdf.mjs  pdf.worker.mjs
frontend/preview/renderer/: render.mjs
frontend/preview/server/: error.js  preloaded.ts  resources.js  responses.ts  routeMap.js  routes.js  routes.ts  start.ts
frontend/preview/style/: style.css
frontend/src/: browser.rs  log.rs
frontend/src/windows/: mod.rs
frontend/util/: log.cpp  log.hpp  url_open.cpp  url_open.hpp
frontend/views/: index.html
scripts/: texcmp.sh
src/: CMakeLists.txt  compile.cpp  compile.hpp  main.cpp  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: log.rs  main.rs
src-tauri/src/windows/: editor.rs
src/compiler/: CMakeLists.txt
src/compiler/scripts/: texpdfc.sh
src/compiler/src/: files.rs  handle.rs  main.rs  watch.rs
src/frontend/: CMakeLists.txt  Cargo.toml  Program.cs  TexEdit.csproj
src/frontend/TexEdit.UI/: UIApplication.axaml  UIApplication.axaml.cs  ViewLocator.cs
src/frontend/TexEdit.UI/TexEdit.UI.ViewModels/: EditorViewModel.cs  ViewModelBase.cs
src/frontend/TexEdit.UI/TexEdit.UI.Views/: EditorView.axaml  EditorView.axaml.cs
src/frontend/TexEdit.Utils/: Browser.cs  Logging.cs
src/interface/: application.cpp  application.hpp
src/interface/windows/: editor_view.cpp  editor_view.hpp  editor_view.ui
src/interface/windows/base/: base_window.cpp  base_window.hpp
src/main/java/texedit/: Program.java
src/main/java/texedit/application/: Application.java
src/main/java/texedit/file/: FileTree.java  FileTreeNode.java  Loader.java
src/main/java/texedit/pane/: EditorPane.java  FilePane.java  PreviewPane.java  StatusBar.java
src/main/java/texedit/web/: Repository.java
src/main/java/texedit/windows/: AboutDialogue.java  Dialogue.java  EditorWindow.java  Window.java
src/scripts/: texcmp.sh
src/util/: log.hpp
tecomp/: Cargo.toml  texpdfc.sh
tecomp/src/: cli.rs  files.rs  log.rs  main.rs  pkg.rs
tepdfserver/: bun.lockb  index.html  tsconfig.json
tepdfserver/renderer/: render.mjs
tepdfserver/server/: cli.ts  responses.ts  routes.ts  start.ts
tepdfserver/style/: style.css
tests/: Fail.tex  secondone.tex  test.tex
texedit/: CMakeLists.txt  except.hpp  main.cpp
texedit/cmake/: ECMFindModuleHelpers.cmake
texedit/gui/: command_ids.hpp  editor_panel.cpp  editor_panel.hpp  explorer_panel.cpp  explorer_panel.hpp  main_frame.cpp  main_frame.hpp  preview_panel.cpp  preview_panel.hpp  prog_info.cpp  prog_info.hpp
texedit/gui/common/: dialogues.cpp  dialogues.hpp
texedit/gui/editor/: src_editor_component.cpp  src_editor_component.hpp
texedit/gui/layout/: layout_manager.cpp  layout_manager.hpp
texedit/gui/layout/panes/: editor_pane.cpp  editor_pane.hpp  explorer_pane.cpp  explorer_pane.hpp  output_pane.cpp  output_pane.hpp  pane_base.hpp  preview_pane.cpp  preview_pane.hpp
texedit/gui/pdf_viewer/: pdf_canvas.cpp  pdf_canvas.hpp  pdf_document.cpp  pdf_document.hpp
texedit/pdf_render/: pdf_document.cpp  pdf_document.hpp  poppler_log.cpp  poppler_log.hpp  rendered_page.hpp
texedit/process/: process.cpp  process.hpp  process_manager.cpp  process_manager.hpp  process_mgr.cpp  process_mgr.hpp
texedit/process/compiler/: tecomp_proc.cpp  tecomp_proc.hpp
texedit/process/services/: compiler_process.cpp  compiler_process.hpp  pdf_server_process.cpp  pdf_server_process.hpp
texedit/util/: except.hpp  log.cpp  log.hpp  logger.cpp  logger.hpp  resources.cpp  resources.hpp
texlive/: README
texlive/nix/: msam10.tfm
texlive_dist/: README
texlive_dist/texmf/fonts/map/pdftex/: pdftex.map
texlive_dist/texmf/fonts/tfm/public/cm/: cmex7.tfm
util/: version.sh
utils/: cmakestrip.sh
