[package]
name = "tecomp"
version = "0.1.0"
description = "TeX compilation backend interface for TexEdit"

edition = "2018"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
ctrlc = { version = "3.4.2", features = ["termination"] }
notify-debouncer-full = "0.3.1"
