[package]
name = "texedit"
version = "0.1.0"
description = "TexEdit Tauri core sources"

edition = "2018"

[build-dependencies]
tauri-build = { version = "1.5.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4" }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
